# chinese-reminder

./: README.md  TODO.md  main.py  pyproject.toml  requirements.txt  setup.py  utils.py
chineseReminder/: configs.py  main.py  sentences.py  utils.py  words_from_chinese.py
chineseReminder/ui_py/: main_gui.py  sentences_gui.py
db/: db-sample.tsv
examples/: dictionary.tsv  sentences.tsv
ui_files/: database_editor_gui.ui  main_gui.ui  secondary_gui.ui  sentences_gui.ui
ui_py/: database_editor_gui.py  main_gui.py  secondary_gui.py  sentences_gui.py
